Add translation for "Download PDF" in multiple languages and update button label

--- a/src/app/i18n/translations/ca.json
+++ b/src/app/i18n/translations/ca.json
@@ -16,7 +16,8 @@
     "zoomLabel": "Zoom",
     "clear": "Esborrar",
     "copyJson": "Copiar JSON",
-    "downloadJson": "Descarregar JSON"
+    "downloadJson": "Descarregar JSON",
+    "downloadPdf": "Descarregar PDF"
   },
   "sidebar": {
     "title": "Anotacions (JSON)"
