--- a/src/app/i18n/translations/es-ES.json
+++ b/src/app/i18n/translations/es-ES.json
@@ -16,7 +16,8 @@
     "zoomLabel": "Zoom",
     "clear": "Limpiar",
     "copyJson": "Copiar JSON",
-    "downloadJson": "Descargar JSON""downloadPdf": "Descargar PDF"
+    "downloadJson": "Descargar JSON",
+    "downloadPdf": "Descargar PDF"
   },
   "sidebar": {
     "title": "Anotaciones (JSON)"
