Add JSON import support for annotations

--- a/src/app/i18n/translations/ca.json
+++ b/src/app/i18n/translations/ca.json
@@ -16,6 +16,7 @@
     "zoomLabel": "Zoom",
     "clear": "Esborrar",
     "copyJson": "Copiar JSON",
+    "importJson": "Importar JSON",
     "downloadJson": "Descarregar JSON",
     "downloadPdf": "Descarregar PDF"
   },
