--- a/src/app/i18n/translations/es-ES.json
+++ b/src/app/i18n/translations/es-ES.json
@@ -16,6 +16,7 @@
     "zoomLabel": "Zoom",
     "clear": "Limpiar",
     "copyJson": "Copiar JSON",
+    "importJson": "Importar JSON",
     "downloadJson": "Descargar JSON",
     "downloadPdf": "Descargar PDF"
   },
