--- a/src/app/i18n/translations/es-ES.json
+++ b/src/app/i18n/translations/es-ES.json
@@ -21,7 +21,11 @@
     "downloadPdf": "Descargar PDF"
   },
   "sidebar": {
-    "title": "Anotaciones (JSON)"
+    "title": "Anotaciones (JSON)",
+    "importJsonFile": "Importar desde archivo",
+    "applyJson": "Aplicar JSON",
+    "jsonPlaceholder": "Pega o edita aquí las coordenadas de anotaciones...",
+    "jsonHint": "Pega las coordenadas o impórtalas desde un JSON con el mismo formato que el archivo exportado."
   },
   "annotation": {
     "fields": {
