--- a/src/app/i18n/translations/en.json
+++ b/src/app/i18n/translations/en.json
@@ -33,6 +33,16 @@
         "label": "Text",
         "placeholder": "Text..."
       },
+      "font": {
+        "label": "Font",
+        "searchPlaceholder": "Search fonts...",
+        "noResults": "No fonts found",
+        "options": {
+          "default": "Default (Helvetica)",
+          "roboto": "Roboto",
+          "poppins": "Poppins"
+        }
+      },
       "size": {
         "label": "Size"
       },
