--- a/src/app/i18n/translations/en.json
+++ b/src/app/i18n/translations/en.json
@@ -36,6 +36,11 @@
       "size": {
         "label": "Size"
       },
+      "font": {
+        "label": "Font",
+        "searchPlaceholder": "Search fonts...",
+        "noResults": "No matching fonts"
+      },
       "color": {
         "label": "Color"
       }
