feat: support annotation types and value overrides

--- a/src/app/i18n/translations/en.json
+++ b/src/app/i18n/translations/en.json
@@ -28,18 +28,40 @@
     "jsonHint": "Paste coordinates or import them from a JSON file following the same format as the exported data."
   },
   "annotation": {
-    "fields": {
-      "text": {
-        "label": "Text",
-        "placeholder": "Text..."
-      },
-      "size": {
-        "label": "Size"
-      },
-      "color": {
-        "label": "Color"
+  "fields": {
+    "text": {
+      "label": "Text",
+      "placeholder": "Text..."
+    },
+    "size": {
+      "label": "Size"
+    },
+    "color": {
+      "label": "Color"
+    },
+    "type": {
+      "label": "Type",
+      "options": {
+        "text": "Text",
+        "check": "Checkbox",
+        "radio": "Radio button",
+        "number": "Number"
       }
     },
+    "value": {
+      "label": "Value override",
+      "placeholder": "Optional fixed value..."
+    },
+    "number": {
+      "decimals": {
+        "label": "Decimals"
+      },
+      "appender": {
+        "label": "Suffix",
+        "placeholder": "E.g. %"
+      }
+    }
+  },
     "color": {
       "hintPreview": "Pick a color, type a HEX or an RGB value. The JSON will always export the color in HEX.",
       "hintEdit": "Paste an existing HEX or RGB value to reuse exact colors.",
