--- a/src/app/i18n/translations/ca.json
+++ b/src/app/i18n/translations/ca.json
@@ -28,18 +28,40 @@
     "jsonHint": "Enganxa les coordenades o importa-les des d'un fitxer JSON amb el mateix format que l'exportat."
   },
   "annotation": {
-    "fields": {
-      "text": {
-        "label": "Text",
-        "placeholder": "Text..."
-      },
-      "size": {
-        "label": "Mida"
-      },
-      "color": {
-        "label": "Color"
+  "fields": {
+    "text": {
+      "label": "Text",
+      "placeholder": "Text..."
+    },
+    "size": {
+      "label": "Mida"
+    },
+    "color": {
+      "label": "Color"
+    },
+    "type": {
+      "label": "Tipus",
+      "options": {
+        "text": "Text",
+        "check": "Casella",
+        "radio": "Botó d'opció",
+        "number": "Nombre"
       }
     },
+    "value": {
+      "label": "Valor fix",
+      "placeholder": "Valor opcional..."
+    },
+    "number": {
+      "decimals": {
+        "label": "Decimals"
+      },
+      "appender": {
+        "label": "Sufix",
+        "placeholder": "Ex.: %"
+      }
+    }
+  },
     "color": {
       "hintPreview": "Selecciona un color, escriu un HEX o un RGB. El JSON sempre exportarà el color en HEX.",
       "hintEdit": "Pots enganxar un HEX o un RGB existent per reutilitzar colors exactes.",
