--- a/src/app/i18n/translations/en.json
+++ b/src/app/i18n/translations/en.json
@@ -14,6 +14,8 @@
     "next": "Next",
     "pageIndicator": "Page {{current}} / {{total}}",
     "zoomLabel": "Zoom",
+    "undo": "Undo",
+    "redo": "Redo",
     "clear": "Clear",
     "copyJson": "Copy JSON",
     "importJson": "Import JSON",
