--- a/src/app/i18n/translations/ca.json
+++ b/src/app/i18n/translations/ca.json
@@ -25,6 +25,15 @@
     "importJsonFile": "Importa des d'un fitxer",
     "applyJson": "Aplica el JSON",
     "jsonPlaceholder": "Enganxa o edita aquí les coordenades de les anotacions...",
+    "templates": {
+      "title": "Plantilles reutilitzables",
+      "placeholder": "Nom de la plantilla",
+      "saveButton": "Desa la plantilla",
+      "selectLabel": "Plantilles desades",
+      "loadButton": "Carrega",
+      "deleteButton": "Elimina",
+      "empty": "Encara no tens cap plantilla desada."
+    },
     "jsonHint": "Enganxa les coordenades o importa-les des d'un fitxer JSON amb el mateix format que l'exportat."
   },
   "annotation": {
