--- a/src/app/i18n/translations/es-ES.json
+++ b/src/app/i18n/translations/es-ES.json
@@ -25,6 +25,15 @@
     "importJsonFile": "Importar desde archivo",
     "applyJson": "Aplicar JSON",
     "jsonPlaceholder": "Pega o edita aquí las coordenadas de anotaciones...",
+    "templates": {
+      "title": "Plantillas reutilizables",
+      "placeholder": "Nombre de la plantilla",
+      "saveButton": "Guardar plantilla",
+      "selectLabel": "Plantillas guardadas",
+      "loadButton": "Cargar",
+      "deleteButton": "Eliminar",
+      "empty": "Aún no tienes plantillas guardadas."
+    },
     "jsonHint": "Pega las coordenadas o impórtalas desde un JSON con el mismo formato que el archivo exportado."
   },
   "annotation": {
