fix: restore editor layout and annotation controls

--- a/src/app/core/i18n/translations/en.json
+++ b/src/app/core/i18n/translations/en.json
@@ -97,7 +97,9 @@
     "actions": {
       "confirm": "Confirm",
       "cancel": "Cancel",
-      "update": "Update"
+      "update": "Update",
+      "duplicate": "Duplicate",
+      "delete": "Delete"
     }
   },
   "viewer": {
