--- a/src/app/core/i18n/translations/ca.json
+++ b/src/app/core/i18n/translations/ca.json
@@ -97,7 +97,9 @@
     "actions": {
       "confirm": "Confirmar",
       "cancel": "Cancel·lar",
-      "update": "Actualitzar"
+      "update": "Actualitzar",
+      "duplicate": "Duplicar",
+      "delete": "Eliminar"
     }
   },
   "viewer": {
