--- a/src/app/i18n/translations/en.json
+++ b/src/app/i18n/translations/en.json
@@ -109,8 +109,37 @@
       "size": {
         "label": "Size"
       },
+      "font": {
+        "label": "Font",
+        "searchPlaceholder": "Search a font...",
+        "ariaLabel": "Font options",
+        "customTag": "Custom",
+        "empty": "No matches"
+      },
+      "weight": {
+        "label": "Weight",
+        "options": {
+          "normal": "Regular",
+          "bold": "Bold"
+        }
+      },
+      "align": {
+        "label": "Alignment",
+        "options": {
+          "left": "Left",
+          "center": "Center",
+          "right": "Right"
+        }
+      },
+      "opacity": {
+        "label": "Opacity"
+      },
       "color": {
         "label": "Color"
+      },
+      "background": {
+        "label": "Background",
+        "clear": "Clear background"
       },
       "type": {
         "label": "Type",
@@ -145,6 +174,17 @@
       "duplicate": "Duplicate annotation"
     },
     "editingBadge": "Editing"
+  },
+  "fonts": {
+    "custom": {
+      "title": "Custom fonts",
+      "description": "Upload .ttf, .otf, .woff or .woff2 files to reuse them in your annotations.",
+      "add": "Add font",
+      "remove": "Remove",
+      "empty": "You haven't added custom fonts yet.",
+      "unsupported": "Your browser does not support loading custom fonts.",
+      "error": "We couldn't load that font file. Try with a different one."
+    }
   },
   "viewer": {
     "emptyMessage": "Upload a PDF and click anywhere to add annotations. Edit them in the preview before confirming ✅."
