feat: add searchable font dropdown

--- a/src/app/i18n/translations/ca.json
+++ b/src/app/i18n/translations/ca.json
@@ -111,7 +111,9 @@
       },
       "font": {
         "label": "Font",
-        "customTag": "Personalitzada"
+        "customTag": "Personalitzada",
+        "searchPlaceholder": "Cerca tipografies...",
+        "noResults": "Cap tipografia coincideix amb la cerca."
       },
       "opacity": {
         "label": "Opacitat"
