--- a/src/app/i18n/translations/en.json
+++ b/src/app/i18n/translations/en.json
@@ -111,7 +111,9 @@
       },
       "font": {
         "label": "Font",
-        "customTag": "Custom"
+        "customTag": "Custom",
+        "searchPlaceholder": "Search fonts...",
+        "noResults": "No fonts match your search."
       },
       "opacity": {
         "label": "Opacity"
