--- a/src/app/i18n/translations/es-ES.json
+++ b/src/app/i18n/translations/es-ES.json
@@ -53,7 +53,26 @@
     "navigationGroup": "Navegación de páginas",
     "zoomGroup": "Controles de zoom",
     "historyGroup": "Acciones de historial",
-    "exportGroup": "Opciones de exportación"
+    "exportGroup": "Opciones de exportación",
+    "library": "Biblioteca"
+  },
+  "library": {
+    "title": "Biblioteca offline",
+    "search": {
+      "label": "Buscar PDFs",
+      "placeholder": "Filtrar por título"
+    },
+    "loading": "Sincronizando tus PDFs guardados...",
+    "empty": "Guarda un PDF desde el editor para verlo aquí incluso sin conexión.",
+    "thumbnailFallback": "Sin vista previa",
+    "pages": "{{count}} páginas",
+    "actions": {
+      "goHome": "Inicio",
+      "new": "Nuevo PDF",
+      "refresh": "Actualizar",
+      "open": "Abrir",
+      "delete": "Eliminar"
+    }
   },
   "sidebar": {
     "title": "Anotaciones (JSON)",
